Wed Dec 15 18:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSHost.m: Update again - record current host name for duration
	of process and cache hosts keyed on the name under which they were
	created.  This can result in multiple cache entries for the same host,
	but this seems to be necessary as DNS name <--> address mappings can
	be asymmetric.
	Thanks to dan@services.iiruc.ro for pointing this out.

Wed Dec 15 17:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/Foundation/NSObject.h: dealloc notification stuff for Helge
	* Source/NSObject.m: dealloc notification stuff for Helge

Wed Dec 15  2:18:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/UnixFileHandle.m: Chck to see if we are given a bad address.
	* Source/NSHost.m: major rewrite

Tue Dec 14  8:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSTimeZone.m: ([+getTimeZoneFile:]) Removed misleading comment
	and hack.
	([+timeZoneWithName:]) Fixed bug in loading timezone data file (unusual
	formats could cause a crash).
	* Source/NSScanner.m: ([-initWithString:]) fix to handle being passed
	a nil string (use an empty string and log an error).
	* NSTimeZones/NSTimeZones.tar: updated to latest info and made sure
	files are in the correct place.

Mon Dec 13 13:31:00 1999  Chris Ball <cball@fmco.com>

	* Source/NSTimeZone.m: Replaced the original, correct comment and
		removed Richard's replacement incorrect comment.

Fri Dec  9 17:00:00 1999  Chris Ball <cball@fmco.com>

	Sorry, I did a commit one directory to deep.
	* Source/NSArray.m: NSMutableArray's compared against a garbage pointer
		on removal.  This causes real problems on SMP machines.
	* Source/NSGarray.m
	* Source/NSCalendarDate.m: DateByAddingYears lost timeZone info.
		InitWithString didn't deal with adjacent format specifiers.
	* Source/NSDate.m: addTimeInterval messed up timeZone if used with
		calendarDate